# analytic-processor-template

./: .gitignore  README.md  cookiecutter.json  requirements.txt
docs/source/: conf.py  getting-started.md  index.md  indexrst  license.md
hooks/: post_gen_project.py  pre_gen_project.py
tests/: conftest.py  test_creation.py
{{ cookiecutter.project_repo }}/: .gitignore  Dockerfile  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
{{ cookiecutter.project_repo }}/manifests/: {{ cookiecutter.project_slug }}.yaml  {{ cookiecutter.project_slug }}_svc.yaml
{{ cookiecutter.project_repo }}/notebooks/: {{ cookiecutter.project_slug }}.ipynb
{{ cookiecutter.project_repo }}/src/: main.py
{{ cookiecutter.project_repo }}/src/api/: api.py
{{ cookiecutter.project_repo }}/src/cloud_storage/: cloud_storage_aws.py  cloud_storage_azure.py
{{ cookiecutter.project_repo }}/src/data/: processor_input1.json  processor_input_example.json
{{ cookiecutter.project_repo }}/src/schemas/: input_schema.json  input_schema.py  output_schema.py
{{ cookiecutter.project_repo }}/src/utils/: authentication.py  file_utils.py  input_schemas.json  logging.py
{{ cookiecutter.project_repo }}/src/{{ cookiecutter.project_slug }}/: processor.py
