[build-system]
requires = ["setuptools", "setuptools.build_meta"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/{{ cookiecutter.project_slug }}/_version.py"
version_scheme = "post-release"
local_scheme = "node-and-date"
parse_scm = "{{ cookiecutter.project_slug }}._version:parse"

[project]
name = "{{ cookiecutter.project_slug }}"
version = "0.0.1"
description = "{{ cookiecutter.description }}"
authors = [ "{{ cookiecutter.author_name }}" ]

[dependencies]
click = "*"
Sphinx = "*"
coverage = "*"
awscli = ">=1.29.35"
flake8 = "*"
python-dotenv = ">=0.5.1"
requests = "*"
requests-mock = "*"
scipy = "*"
geosyspy = "*"
pandas = "*"
shapely = "*"
rasterio = "*"
xarray = "*"
pyproj = "*"
matplotlib = "*"
fastapi = "*"
jsonschema = "*"
hypercorn = { version = "0.14.3", extra = ["trio"] }